<resources>
    <string name="app_name">AirCarBusiness</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="town">Town / City</string>
    <string name="county">County / Province</string>
    <string name="country">Country</string>
    <string name="post_car">Post a car</string>
    <string-array name="makeArray">
        <item>Any Make</item>
        <item>Alfa Romeo</item>
        <item>Audi</item>
        <item>BMW</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Lexus</item>
        <item>Mazda</item>
        <item>Mercedes-Benz</item>
        <item>Nissan</item>
        <item>Opel</item>
        <item>Peugeot</item>
        <item>Seat</item>
        <item>Volvo</item>
    </string-array>
    <string-array name="emptyArray">
        <item>Any Model</item>
    </string-array>
    <string-array name="alfaRomeoArray">
        <item>Any Model</item>
        <item>145</item>
        <item>146</item>
        <item>147</item>
        <item>156</item>
        <item>159</item>
        <item>166</item>
        <item>Alfasud</item>
        <item>Brera</item>
        <item>Giulietta</item>
        <item>GT</item>
        <item>Mito</item>
        <item>Spider</item>
    </string-array>
    <string-array name="audiArray">
        <item>Any Model</item>
        <item>80</item>
        <item>100</item>
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        <item>A4</item>
        <item>A5</item>
        <item>A6</item>
        <item>A7</item>
        <item>Q3</item>
        <item>Q5</item>
        <item>Q7</item>
        <item>R8</item>
        <item>RS4</item>
        <item>RS5</item>
        <item>RS6</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S8</item>
        <item>TT</item>
        <item>TTS</item>
    </string-array>
    <string-array name="bmwArray">
        <item>Any Model</item>
        <item>1-series</item>
        <item>2-series</item>
        <item>3-series</item>
        <item>4-series</item>
        <item>5-series</item>
        <item>6-series4</item>
        <item>7-series</item>
        <item>8-series</item>
        <item>i3</item>
        <item>i8</item>
        <item>M3</item>
        <item>M4</item>
        <item>M5</item>
        <item>M6</item>
        <item>X1</item>
        <item>X3</item>
        <item>X4</item>
        <item>X5</item>
        <item>X6</item>
        <item>Z3</item>
        <item>Z4</item>
    </string-array>
    <string-array name="fiatArray">
        <item>Any Model</item>
        <item>125</item>
        <item>126p</item>
        <item>500</item>
        <item>Bravo</item>
        <item>Coupe</item>
        <item>Punto</item>
        <item>Uno</item>
    </string-array>
    <string-array name="fordArray">
        <item>Any Model</item>
        <item>Anglia</item>
        <item>B-MAX</item>
        <item>Cargo</item>
        <item>C-Max</item>
        <item>Cougar</item>
        <item>ECOSPORT</item>
        <item>Escort</item>
        <item>Fiesta</item>
        <item>Focus</item>
        <item>GT</item>
        <item>KA</item>
        <item>Mondeo</item>
        <item>Mustang</item>
        <item>S-MAX</item>
        <item>Transit</item>
    </string-array>
    <string-array name="hondaArray">
        <item>Any Model</item>
        <item>Accord</item>
        <item>Civic</item>
        <item>CR</item>
        <item>FR</item>
        <item>HR</item>
        <item>Insight</item>
        <item>Integra</item>
        <item>Stepwagon</item>
    </string-array>
    <string-array name="hyundaiArray">
        <item>Any Model</item>
        <item>Accent</item>
        <item>Amica</item>
        <item>Coupe</item>
        <item>i10</item>
        <item>i20</item>
        <item>i30</item>
        <item>i40</item>
        <item>i800</item>
        <item>Montana</item>
        <item>Sonata</item>
        <item>Tucson</item>
    </string-array>
    <string-array name="lexusArray">
        <item>Any Model</item>
        <item>CT</item>
        <item>GS</item>
        <item>IS</item>
        <item>LS</item>
        <item>RX</item>
        <item>SC</item>
        <item>Soarer</item>
    </string-array>
    <string-array name="mazdaArray">
        <item>Any Model</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>6</item>
        <item>CX-3</item>
        <item>CX-5</item>
        <item>CX-7</item>
        <item>MPV</item>
        <item>MX-3</item>
        <item>MX-5</item>
        <item>MX-6</item>
        <item>RX-7</item>
        <item>RX-8</item>
    </string-array>
    <string-array name="mercedesArray">
        <item>Any Model</item>
        <item>190</item>
        <item>200</item>
        <item>220</item>
        <item>230</item>
        <item>240</item>
        <item>250</item>
        <item>280</item>
        <item>300</item>
        <item>320</item>
        <item>350</item>
        <item>380</item>
        <item>500</item>
        <item>600</item>
        <item>A-Class</item>
        <item>B-Class</item>
        <item>C-Class</item>
        <item>CE-Class</item>
        <item>CL-Class</item>
        <item>CLA-Class</item>
        <item>CLK-Class</item>
        <item>CLS-Class</item>
        <item>E-Class</item>
        <item>G-Class</item>
        <item>GLA</item>
        <item>R-Class</item>
        <item>S-Class</item>
        <item>SLK-Class</item>
        <item>V-Class</item>


    </string-array>
    <string-array name="nissanArray">
        <item>Any Model</item>
        <item>100 NX</item>
        <item>103 NX</item>
        <item>Almera</item>
        <item>Cube</item>
        <item>D21</item>
        <item>D22</item>
        <item>GT-R</item>
        <item>Maxima</item>
        <item>Micra</item>
        <item>Pathfinder</item>
        <item>Primera</item>
        <item>Qashqai</item>
        <item>Terrano</item>
        <item>ZX</item>
    </string-array>
    <string-array name="openArray">
        <item>Any Model</item>
        <item>Adam</item>
        <item>Astra</item>
        <item>Corsa</item>
        <item>Insignia</item>
        <item>Omega</item>
        <item>Tigra</item>
        <item>Vectra</item>
        <item>Zafira</item>
    </string-array>
    <string-array name="peugeotArray">
        <item>Any Model</item>
        <item>106</item>
        <item>107</item>
        <item>205</item>
        <item>208</item>
        <item>306</item>
        <item>405</item>
        <item>508</item>
        <item>605</item>
        <item>807</item>
        <item>Expert</item>
        <item>ION</item>
        <item>RCZ</item>
    </string-array>
    <string-array name="seatArray">
        <item>Any Model</item>
        <item>Altea</item>
        <item>Exeo</item>
        <item>Ibiza</item>
        <item>Leon</item>
        <item>Malaga</item>
        <item>MII</item>
        <item>Toledo</item>
    </string-array>
    <string-array name="volvoArray">
        <item>Any Model</item>
        <item>200-series</item>
        <item>400-series</item>
        <item>700-series</item>
        <item>900-series</item>
        <item>C30</item>
        <item>C70</item>
        <item>S40</item>
        <item>S70</item>
        <item>S80</item>
        <item>S90</item>
        <item>V50</item>
        <item>V60</item>
        <item>V70</item>
        <item>Xc60</item>
        <item>Xc70</item>
        <item>Xc90</item>
    </string-array>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="registration_no">Registration Number</string>
    <string name="engine_size">Engine Size</string>
    <string name="description">Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price">Price</string>
    <string name="city">City</string>
    <string name="loading">Loading. Please wait</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_track_my_car_fragment">Map</string>
    <string name="no_posts">You have no car posts</string>
    <string name="no_notification">There are no notifications</string>
    <string name="no_reservations">There are no reservations</string>
    <string name="title_activity_track_my_car">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>