<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:id="@+id/big_imageView"
        android:layout_height="150dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_below="@+id/big_imageView"
        android:id="@+id/small2_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_toEndOf="@+id/small2_imageView"
        android:layout_alignBottom="@id/small2_imageView"
        android:id="@+id/small3_imageView" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:layout_toStartOf="@id/small2_imageView"
        android:layout_alignBottom="@id/small2_imageView"
        android:id="@+id/small1_imageView" />

    <TextView
        android:text="@string/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/makemodel_textView"
        android:layout_below="@+id/small1_imageView"
        android:layout_centerHorizontal="true"
        android:textAlignment="textStart" />

    <TextView
        android:text="@string/registration_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/registration_textView"
        android:textAlignment="textStart"
        android:layout_below="@+id/makemodel_textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/engine_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/engine_textView"
        android:textAlignment="textStart" />


    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/engine_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/description_textView"
        android:textAlignment="textStart"
        android:textStyle="normal|bold" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/message_textView"
        android:layout_below="@id/description_textView"
        android:textAlignment="textStart" />

</RelativeLayout>